# marvin

./: .env.example  .gitignore  09-life-system.md  10-growth-system.md  11-relationship-system.md  12-autonomy-system.md  13-communication-system.md  14-evolution-system.md  17-enforcement-prompt.md  18-guardrails-system.md  CHAT_PACKAGE.md  CLAUDE.md  CONTEXT.md  PRD-openclaw-marvin.md  README.md  RUNBOOK.md  SIM_OFFICE_BUILD_PLAN_v1.md  SIM_OFFICE_SYSTEM_v1.md  SYSTEM_OPERATIONS.md  hub-card.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec-02-cache-layer.md  spec-03-lobby.md  spec-06-rate-limiter.md  spec-07-boss-emergency.md
.claude/: settings.json
.claude/commands/: bootstrap.md  dev.md  vault-update.md  vps-deploy.md  vps-logs.md  vps-status.md
.claude/hooks/: session-start.sh
config/: keywords.json  lobby.defaults.yml
docs/: index.html  system-reality-map.json
docs/ADRs/: 000-adr-process.md  001-close-betapp-branches.md  001-constitutional-principles.md  002-betapp-railway-to-vps.md  002-cost-vs-performance.md  003-rate-limit-fallback-hierarchy.md  004-conversation-memory-pipeline.md
docs/betapp/: checkpoints.json  (+1 more)
infra/: bootstrap.sh  claude-hub.compose.yml  codex-brain.Dockerfile  codex-control.compose.yml  codex-worker.py  entrypoint.sh
mission-control/: index.html
protocols/: pdc.json
scripts/: deploy.sh  lock-ollama.sh
src/: __init__.py  worker.py
src/vps/: state.py  (+6 more)
tests/: test_circuit_breaker.py  test_config.py  test_golden_routing_cases.py  test_health_monitor.py  test_keywords.py  test_observability.py  test_router.py
(+88 files in other folders)
